Bulk User Onboarding has been finished
