# Modules/User/routes/api/v1.php
@@ -6,3 +6,10 @@ use Modules\User\Http\Controllers\Api\UsersController;
 
 Route::apiResource('users', UsersController::class)->names('users');
 
+
+Route::post('/users/bulk', [UsersController::class, 'storeBulk']);
+
+
+//for testing
+Route::get('/create-users-json', [UsersController::class, 'createUsersJson']);
+
